Adding Post api for showing product

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <html>
     <h1>SIT725</h1>
     <h3>Online Workshop 2</h3>
+    <body>
+        <form id="form1" action="/multiplyByPost" method="post">
+            <input type="text" id="num1" name="num1">
+            <input type="text" id="num2" name="num2">
+            <input type="Submit" value="Find Product (POST API)">
+        </form>
+
+    </body>
 </html>
